# code/backend/swagger.json
@@ -401,7 +401,7 @@
       "get": {
         "tags": ["ManagerEndpoints"],
         "summary": "Get all players of a team - Access Token required",
-        
+
         "responses": {
           "200": {
             "description": "Success",
@@ -490,9 +490,34 @@
         }
       }
     },
+    "/manager/getTeamManagers": {
+      "get": {
+        "tags": ["ManagerEndpoints"],
+        "summary": "Get all managers of a team - Access Token required",
 
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "$ref": "#/components/schemas/TeamManagersResponse"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Bad Request"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
 
-    
     "/player": {
       "post": {
         "tags": ["PlayerEndpoints"],
@@ -524,7 +549,7 @@
       "get": {
         "tags": ["PlayerEndpoints"],
         "summary": "Get player details",
-        
+
         "responses": {
           "200": {
             "description": "Success",
@@ -546,7 +571,6 @@
           }
         }
       }
-
     },
 
     "/player/myTeams": {
@@ -576,7 +600,7 @@
         }
       }
     },
-    
+
     "/player/analytics-summary/{duration}": {
       "get": {
         "tags": ["PlayerEndpoints"],
@@ -658,7 +682,6 @@
             "content": {
               "application/json": {
                 "$ref": "#/components/schemas/PlayerResponse"
-                
               }
             }
           },
@@ -674,7 +697,7 @@
           }
         }
       }
-    },    
+    },
     "/player/remove": {
       "delete": {
         "tags": ["PlayerEndpoints"],
@@ -756,11 +779,6 @@
         }
       }
     },
-    
-
-
-
-
 
     "/hub/credetials": {
       "post": {
@@ -880,7 +898,7 @@
         }
       }
     },
-    
+
     "/login/player": {
       "post": {
         "tags": ["LoginEndpoints"],
@@ -1002,16 +1020,10 @@
                   "type": "string"
                 },
                 "value": {
-                  "anyOf": [
-                    { "type": "string" },
-                    { "type": "number" }
-                  ]
+                  "anyOf": [{ "type": "string" }, { "type": "number" }]
                 },
                 "trend": {
-                  "anyOf": [
-                    { "type": "string" },
-                    { "type": "number" }
-                  ]
+                  "anyOf": [{ "type": "string" }, { "type": "number" }]
                 }
               }
             }
@@ -1019,32 +1031,30 @@
           "tableData": {
             "type": "object",
             "properties": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "impactsRecorded": {
-                    "type": "number"
-                  },
-                  "cumulativeImpact": {
-                    "type": "number"
-                  },
-                  "highestImpact": {
-                    "type": "number"
-                  },
-                  "averageImpact": {
-                    "type": "number"
-                  },
-                  "dominantDirection": {
-                    "type": "number"
-                  },
-                  "concussions": {
-                    "type": "number"
-                  }
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "impactsRecorded": {
+                  "type": "number"
+                },
+                "cumulativeImpact": {
+                  "type": "number"
+                },
+                "highestImpact": {
+                  "type": "number"
+                },
+                "averageImpact": {
+                  "type": "number"
+                },
+                "dominantDirection": {
+                  "type": "number"
+                },
+                "concussions": {
+                  "type": "number"
                 }
-                
-              
+              }
             }
           }
         },
@@ -1077,31 +1087,28 @@
             }
           ],
           "tableData": {
-              "69": {
-                "name": "Angelo Mathews",
-                "impactsRecorded": 50,
-                "cumulativeImpact": 850,
-                "highestImpact": 25,
-                "averageImpact": 20,
-                "dominantDirection": "Left",
-                "concussions": 2
-              },
-              "55": {
-                "name": "Kusal Perera",
-                "impactsRecorded": 50,
-                "cumulativeImpact": 850,
-                "highestImpact": 25,
-                "averageImpact": 20,
-                "dominantDirection": "Left",
-                "concussions": 2
-              }
-            
+            "69": {
+              "name": "Angelo Mathews",
+              "impactsRecorded": 50,
+              "cumulativeImpact": 850,
+              "highestImpact": 25,
+              "averageImpact": 20,
+              "dominantDirection": "Left",
+              "concussions": 2
+            },
+            "55": {
+              "name": "Kusal Perera",
+              "impactsRecorded": 50,
+              "cumulativeImpact": 850,
+              "highestImpact": 25,
+              "averageImpact": 20,
+              "dominantDirection": "Left",
+              "concussions": 2
+            }
           }
-          
         }
-    }, 
+      },
 
-      
       "SessionRequest": {
         "type": "object",
         "properties": {
@@ -1150,7 +1157,7 @@
           }
         }
       },
-      
+
       "HubRequest": {
         "type": "object",
         "properties": {
@@ -1249,8 +1256,28 @@
             "email": "kusal_perera@gmail.com",
             "verification": "verified"
           }
-          
         }
+      },
+      "TeamManagersResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "schemas": {
+            "$ref": "#/components/schemas/ManagersResponse"
+          }
+        },
+        "example": [
+          {
+            "name": "Angelo Mathews",
+            "email": "angelomathews@gmail.com",
+            "verification": "verified"
+          },
+          {
+            "name": "Kusal Perera",
+            "email": "kusal_perera@gmail.com",
+            "verification": "verified"
+          }
+        ]
       },
 
       "Player": {
@@ -1271,140 +1298,136 @@
         }
       },
 
-
       "AnalyticsSummary": {
-          "type": "object",
-          "properties": {
-            "summaryData": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "type": "string"
-                  },
-                  "value": {
-                    "anyOf": [
-                      { "type": "string" },
-                      { "type": "number" }
-                    ]
-                  },
-                  "trend": {
-                    "anyOf": [
-                      { "type": "number" },
-                      { "$ref": "#/components/schemas/ImpactDirection" }
-                    ]
-                  }
-                }
-              }
-            },
-            "histogramData": {
+        "type": "object",
+        "properties": {
+          "summaryData": {
+            "type": "array",
+            "items": {
               "type": "object",
               "properties": {
-                "left": {
-                  "type": "array",
-                  "items": {
-                    "type": "number"
-                  }
+                "title": {
+                  "type": "string"
                 },
-                "right": {
-                  "type": "array",
-                  "items": {
-                    "type": "number"
-                  }
+                "value": {
+                  "anyOf": [{ "type": "string" }, { "type": "number" }]
                 },
-                "front": {
-                  "type": "array",
-                  "items": {
-                    "type": "number"
-                  }
-                },
-                "back": {
-                  "type": "array",
-                  "items": {
-                    "type": "number"
-                  }
-                }
-              }
-            },
-            "criticalSessions": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "session_name": {
-                    "type": "string"
-                  },
-                  "session_date": {
-                    "type": "string"
-                  },
-                  "cumulative_impact": {
-                    "type": "number"
-                  },
-                  "average_impact": {
-                    "type": "number"
-                  },
-                  "largest_impact": {
-                    "type": "number"
-                  }
+                "trend": {
+                  "anyOf": [
+                    { "type": "number" },
+                    { "$ref": "#/components/schemas/ImpactDirection" }
+                  ]
                 }
               }
             }
           },
-          "example": {
-            "summaryData": [
-              {
-                "title": "Cumulative Impacts",
-                "value": "850 g",
-                "trend": -20
+          "histogramData": {
+            "type": "object",
+            "properties": {
+              "left": {
+                "type": "array",
+                "items": {
+                  "type": "number"
+                }
               },
-              {
-                "title": "Impacts Recorded",
-                "value": "50",
-                "trend": 20
+              "right": {
+                "type": "array",
+                "items": {
+                  "type": "number"
+                }
               },
-              {
-                "title": "Average Impact",
-                "value": "43 g",
-                "trend": 40
+              "front": {
+                "type": "array",
+                "items": {
+                  "type": "number"
+                }
               },
-              {
-                "title": "Dominant Direction",
-                "value": "Left",
-                "trend": 10
+              "back": {
+                "type": "array",
+                "items": {
+                  "type": "number"
+                }
               }
-            ],
-            "histogramData": {
-              "left": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
-              "right": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
-              "front": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
-              "back": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0]
-            },
-            "criticalSessions": [
-              {
-                "session_name": "Session 1",
-                "session_date": "2024-01-22",
-                "cumulative_impact": 50,
-                "average_impact": 20,
-                "largest_impact": 25
-              },
-              {
-                "session_name": "Session 2",
-                "session_date": "2024-01-23",
-                "cumulative_impact": 70,
-                "average_impact": 20,
-                "largest_impact": 20
-              },
-              {
-                "session_name": "Session 3",
-                "session_date": "2024-01-24",
-                "cumulative_impact": 90,
-                "average_impact": 20,
-                "largest_impact": 25
+            }
+          },
+          "criticalSessions": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "session_name": {
+                  "type": "string"
+                },
+                "session_date": {
+                  "type": "string"
+                },
+                "cumulative_impact": {
+                  "type": "number"
+                },
+                "average_impact": {
+                  "type": "number"
+                },
+                "largest_impact": {
+                  "type": "number"
+                }
               }
-            ]
+            }
           }
-      }, 
+        },
+        "example": {
+          "summaryData": [
+            {
+              "title": "Cumulative Impacts",
+              "value": "850 g",
+              "trend": -20
+            },
+            {
+              "title": "Impacts Recorded",
+              "value": "50",
+              "trend": 20
+            },
+            {
+              "title": "Average Impact",
+              "value": "43 g",
+              "trend": 40
+            },
+            {
+              "title": "Dominant Direction",
+              "value": "Left",
+              "trend": 10
+            }
+          ],
+          "histogramData": {
+            "left": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
+            "right": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
+            "front": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0],
+            "back": [0, 1, 4, 0, 0, 0, 0, 0, 0, 0]
+          },
+          "criticalSessions": [
+            {
+              "session_name": "Session 1",
+              "session_date": "2024-01-22",
+              "cumulative_impact": 50,
+              "average_impact": 20,
+              "largest_impact": 25
+            },
+            {
+              "session_name": "Session 2",
+              "session_date": "2024-01-23",
+              "cumulative_impact": 70,
+              "average_impact": 20,
+              "largest_impact": 20
+            },
+            {
+              "session_name": "Session 3",
+              "session_date": "2024-01-24",
+              "cumulative_impact": 90,
+              "average_impact": 20,
+              "largest_impact": 25
+            }
+          ]
+        }
+      },
 
       "ImpactDirection": {
         "type": "string",
@@ -1423,7 +1446,7 @@
           "jerseyId": 80
         }
       },
-  
+
       "PlayerRemoveResponse": {
         "type": "object",
         "properties": {
@@ -1438,14 +1461,13 @@
       "PlayerTeamRequest": {
         "type": "object",
         "properties": {
-          
           "jerseyId": {
             "type": "number"
           },
           "fullName": {
             "type": "string"
           },
-          
+
           "playerEmail": {
             "type": "string"
           }
@@ -1459,18 +1481,17 @@
       "PlayerTeamResponse": {
         "type": "object",
         "properties": {
-          
           "jerseyId": {
             "type": "number"
           },
           "fullName": {
             "type": "string"
           },
-          
+
           "playerEmail": {
             "type": "string"
           },
-          "teamId":{
+          "teamId": {
             "type": "string"
           }
         },
@@ -1552,10 +1573,7 @@
           }
         }
       },
-      
 
-
-      
       "LoginResponse": {
         "type": "object",
         "properties": {
@@ -1630,6 +1648,25 @@
           "firstName": "John",
           "lastName": "Doe",
           "email": "example@example.com"
+        }
+      },
+      "ManagersResponse": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "verification": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "name": "John Doe",
+          "email": "example@example.com",
+          "verification": "verified"
         }
       },
 
@@ -1711,10 +1748,6 @@
         }
       },
 
-
-
-      
-
       "SessionDetailsResponse": {
         "type": "object",
         "properties": {
@@ -1756,9 +1789,8 @@
           "players": ["player1", "player2"]
         }
       }
-      
-      },
-    
+    },
+
     "requestBodies": {
       "TeamCreateRequest": {
         "content": {
